fix(Dock): update focus style to replace `focus-visible` with `focus` for label visibility adjustment

--- a/components/Dock/Dock.module.scss
+++ b/components/Dock/Dock.module.scss
@@ -71,7 +71,7 @@
       }
     }
 
-    &:focus-visible {
+    &:focus {
       .label {
         opacity: 1;
       }
